--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-	<div id = "footer" class = "container-fluid" style = "background-color:#f8f9fa ">
+	<div id = "footer" class = "container-fluid mt-5 pb-3" style = "background-color:#f8f9fa ">
 		<div class = "row">
 			<div class = "col-3">
 			</div>
@@ -19,17 +19,4 @@
 	</div>
 
 	</body>
-
-	<script> 
-		$( window ).on( "load", function() {
-		    if ($("body").height() < (window.innerHeight - 150))
-				{
-					$("body").height(window.innerHeight);
-				}
-				else
-				{
-					$("body").height($("body").height() + 150);
-				}
-		});
-	</script>
 </html>
