--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,28 +1,50 @@
 <% include ./partials/header.ejs %>
 
-<div class = "container mt-4" id = "login">
-	<div class = "row justify-content-center">
-		<div class = "col-5">
-			<% if (message !== null) {%>
-			<div id = "message" class = "m-5 text-danger <%= border ? border : "border border-primary"%>">
-				<h3 class = "text-center"> <%=message%> </h3>
-			</div>
-			<% } %>
+<div class = "container-fluid">
+	<div class = "row">
+		<div class = "col-3" id = "optionContainer"> 
+			
 		</div>
-	</div>
-	<div class = "row justify-content-center">
-		<div class = "col-4">
+		<div class = "col-6" id = "mainContainer">
+			<div class = "invisible">
+				invisible
+			</div>
+			<h5 class = "border-bottom">
+				Login
+			</h5>
 			<form action = "/login" method = "POST">
-				<h4>username</h4>
-				<input name = "username" type = "text" required>
-				<h4>password</h4>
-				<input name = "password" type = "password" required>
-				<button class = "my-3 d-block btn btn-primary" type = "submit"> login </button>
+				<div class="form-group">
+					<input name = "username" class="form-control" type = "text" placeholder="Username" style = "width: 30%" required>
+			  </div>
+			  <div class="form-group">
+					<input name = "password" class="form-control" type = "password" placeholder="Password" style = "width: 30%" required>
+			  </div>
+			  <div class="form-group">
+					<% if (message !== null) {%>
+						<div class = "text-danger pl-1"> <%=message%> </div>
+					<% } %>
+			  </div>
+				<button class = "my-3 d-block btn btn-primary" type = "submit"> Login </button>
 			</form>
-			<h4>  new user?  <a href = "/register">register!</a></h4>
+			<h4>New user?<a href = "/register"> Register!</a></h4>
+		</div>
+		<div class = "col-3" id = "investmentContainer">
+			
 		</div>
 	</div>
 </div>
 
+<script>
+	$( window ).on( "load", function() {
+		$("#footer").css({
+			position: "fixed",
+		  left: 0,
+		  bottom: 0,
+		})
+	}); 
+</script>
+
 
 <% include ./partials/footer.ejs %>
+
+
