--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,17 +41,17 @@
 	    <span class="navbar-text">
 	    	<% if (user){ %>
 				<form action = "/logout" method = POST>
-					<button class = "btn btn-light" type = "submit"> logout </button>
+					<button class = "btn btn-light" type = "submit"> Logout </button>
 				</form>
 				<% } else {%>
-				<a class ="nav-link" href = "/login" > Login </a>
+				<a class ="nav-link" href = "/login" style = "height: 38px" > Login </a>
 			<% }%>
 	    </span>
 	</div>
 	</nav>
 	<nav class="navbar">
 		<a> </a>
-		<a id = "allitemlink" class = "position-relative" href = "/item/sort?sortby%5B0%5D=sortByNone&weight%5B0%5D=50&filterByPosition=on&position=500&trendType=none"> browse / sort all items</a>
+		<a id = "allitemlink" class = "position-relative" href = "/item/sort?sortby%5B0%5D=sortByNone&weight%5B0%5D=50&filterByPosition=on&position=500&trendType=none"> browse / sort / filter all items</a>
 		<a> </a>
 	</nav>
 
